[package]
name = "grassfinder"
version = "0.2.0"
authors = ["polymetric <polymetricofficial@gmail.com>", "humhue"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"

[profile.release]
lto = true
